Minor fix to _block.styl for non-div images. Added .circle util class for making any image fully round. Minor name change to util classes for succinctity: full-width-element > full-width, no-bleed-element > no-bleed

--- a/src/stylus/_block.styl
+++ b/src/stylus/_block.styl
@@ -3,12 +3,8 @@
   margin-left 5px
   margin-right 5px
   img
-    max-width 75%
-    max-height 75%
-    margin-top 1.1rem
-    margin-bottom 1.1rem
-    margin-left 12.5%
-    margin-right 12.5%
+    margin 0
+    padding 0
   h1
     padding 0
     margin 0
@@ -44,7 +40,7 @@
       font-size 1.4rem
       .fa
         background-color lighten($default_site_colour, 5)
-        padding 0.35rem 0.35rem 0.4rem 0.35rem
+        padding 0.35rem 0.35rem 0.6rem 0.35rem
       .round
         .fa
           border-top-left-radius 4px
