--- a/src/stylus/_utilities.styl
+++ b/src/stylus/_utilities.styl
@@ -1,8 +1,8 @@
 /* UTILITIES */
-.full-width-element /* Makes element the width of it's parent*/
+.full-width /* Makes element the width of it's parent*/
   width 100%
   box-sizing border-box 
-.no-bleed-element /* Stops image from bleeding over edge of parent */
+.no-bleed /* Stops image from bleeding over edge of parent */
   max-width 100%
   box-sizing border-box
 .push
@@ -11,6 +11,8 @@
   float left
 .round /* Makes any element have round corners */
   border-radius 4px
+.circle /* Use with images to make them into perfect circles */
+  border-radius 50%
 .shadow-left
   box-shadow -3px 4px 10px 2px rgba(0,0,0,0.3)
 .shadow-right 
